sfdx-source/force-app/main/default/objects/Rate_Card__c/Rate_Card__c.object-meta.xml
<CustomObject>
    <description>This is needed to enter Rate Card for Certain Products</description>
    <label>Rate Card</label>
    <nameField>
        <displayFormat>RC-{00}</displayFormat>
        <label>Rate Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>