sfdx-source/force-app/main/default/objects/Rate_Card__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>LEM- 8764  Choose the applicable fee type for a given state</description>
    <label>Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Tiered Pricing</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
                <isActive>false</isActive>
                <label>Commission</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>