sfdx-source/force-app/main/default/objects/Rate_Card__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM- 8764 Initial Set up for Rate Card</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>