sfdx-source/force-app/main/default/objects/Rate_Card__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-8764 Look up to Rate Card</description>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Rate Cards</relationshipLabel>
    <relationshipName>Rate_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>