sfdx-source/force-app/main/default/objects/Rate_Card__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <label>Pricing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat Fee</fullName>
            </value>
            <value>
                <fullName>Tiered Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>