sfdx-source/force-app/main/default/objects/Rate_Card__c/fields/Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM- 8764 Initial Set up for Rate Card</description>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Rate Cards</relationshipLabel>
    <relationshipName>Rate_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>