sfdx-source/force-app/main/default/objects/Rate_Card__c/fields/Requested_Fee__c.field-meta.xml
<CustomField>
    <fullName>Requested_Fee__c</fullName>
    <label>Requested Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>