sfdx-source/force-app/main/default/objects/Rate_Card__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>LEM- 8764  Start Date for which the Rate Card is applicable</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>